--- a/package.json
+++ b/package.json
@@ -1,51 +1,31 @@
 {
-	"name": "@nuogz/wock",
-	"version": "1.2.0",
-	"description": "web socket library based on ws and native WebSocket",
+	"name": "@nuogz/wock-server",
+	"version": "2.0.0",
+	"description": "WebSocket server library based on ws",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
 	"repository": {
 		"type": "git",
-		"url": "github:nuogz/wock"
+		"url": "github:nuogz/wock-server"
 	},
 	"type": "module",
-	"typesSource": [
-		"browser"
-	],
+	"typesSource": [],
 	"engines": {
 		"node": ">=14.18.1"
 	},
 	"sideEffects": false,
 	"main": "./index.js",
-	"browser": {
-		"./index.js": "./src/index.js"
-	},
 	"files": [
 		"index.js",
-		"src/**",
 		"lib/**",
 		"locale/**"
 	],
+	"dependencies": {
+		"@nuogz/class-inject-leveled-log": "^1.0.0",
+		"@nuogz/i18n": "^1.2.1",
+		"ws": "^8.9.0"
+	},
 	"devDependencies": {
-		"eslint": "^8.24.0",
-		"@nuogz/class-inject-leveled-log": "^1.0.0",
-		"@nuogz/i18n": "^1.2.1",
-		"ws": "^8.9.0"
-	},
-	"peerDependencies": {
-		"@nuogz/class-inject-leveled-log": "^1.0.0",
-		"@nuogz/i18n": "^1.2.1",
-		"ws": "^8.9.0"
-	},
-	"peerDependenciesMeta": {
-		"@nuogz/class-inject-leveled-log": {
-			"optional": true
-		},
-		"@nuogz/i18n": {
-			"optional": true
-		},
-		"ws": {
-			"optional": true
-		}
+		"eslint": "^8.25.0"
 	}
 }
