--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nuogz/wock-server",
-	"version": "2.0.0",
+	"version": "3.0.0",
 	"description": "WebSocket server library based on ws",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
@@ -18,14 +18,21 @@
 	"files": [
 		"index.js",
 		"lib/**",
-		"locale/**"
+		"locale/**",
+		"**/*.d.ts"
 	],
+	"scripts": {
+		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --allowJs --preserveSymlinks"
+	},
 	"dependencies": {
-		"@nuogz/class-inject-leveled-log": "^1.0.0",
-		"@nuogz/i18n": "^1.2.1",
-		"ws": "^8.9.0"
+		"@nuogz/i18n": "^1.3.2",
+		"@nuogz/utility": "^1.6.1",
+		"ws": "^8.12.0"
 	},
 	"devDependencies": {
-		"eslint": "^8.25.0"
+		"@types/node": "^18.13.0",
+		"@types/ws": "^8.5.4",
+		"eslint": "^8.33.0",
+		"typescript": "^4.9.5"
 	}
 }
