--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nuogz/wock-server",
-	"version": "3.0.0",
+	"version": "3.1.0",
 	"description": "WebSocket server library based on ws",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
@@ -22,17 +22,17 @@
 		"**/*.d.ts"
 	],
 	"scripts": {
-		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --allowJs --preserveSymlinks"
+		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --allowJs"
 	},
 	"dependencies": {
-		"@nuogz/i18n": "^1.3.2",
-		"@nuogz/utility": "^1.6.1",
-		"ws": "^8.12.0"
+		"@nuogz/i18n": "^3.1.0",
+		"@nuogz/utility": "^1.6.5",
+		"ws": "^8.13.0"
 	},
 	"devDependencies": {
-		"@types/node": "^18.13.0",
+		"@types/node": "^18.15.11",
 		"@types/ws": "^8.5.4",
-		"eslint": "^8.33.0",
+		"eslint": "^8.37.0",
 		"typescript": "^4.9.5"
 	}
 }
