--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
 	"name": "@nuogz/wock-server",
-	"version": "3.1.3",
+	"version": "3.2.0",
 	"description": "WebSocket server library based on ws",
-	"author": "Nuogz",
+	"author": "DanoR",
 	"license": "LGPL-3.0-or-later",
 	"repository": {
 		"type": "git",
 		"url": "github:nuogz/wock-server"
 	},
+	"private": false,
 	"type": "module",
 	"typesSource": [
 		"node"
 	],
+	"sideEffects": false,
 	"engines": {
 		"node": ">=14.18.1"
 	},
-	"sideEffects": false,
 	"main": "./index.js",
 	"files": [
 		"index.js",
 		"locale/**",
 		"**/*.d.ts"
 	],
+	"typings": "./index.d.ts",
 	"scripts": {
-		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --allowJs --moduleResolution nodenext --module esnext --target esnext --experimentalDecorators"
+		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --moduleResolution bundler --module esnext --target esnext --experimentalDecorators --strict --allowJs --jsx preserve"
 	},
 	"dependencies": {
-		"@nuogz/i18n": "^3.2.1",
-		"@nuogz/utility": "^1.7.1",
-		"ws": "^8.13.0"
+		"@nuogz/i18n": "^3.3.1",
+		"@nuogz/utility": "^1.8.1",
+		"ws": "^8.14.2"
 	},
 	"devDependencies": {
-		"@types/node": "^20.4.1",
-		"@types/ws": "^8.5.5",
-		"eslint": "^8.44.0",
-		"typescript": "^5.1.6"
+		"@types/node": "^20.10.3",
+		"@types/ws": "^8.5.10",
+		"eslint": "^8.55.0",
+		"typescript": "^5.3.3"
 	}
 }
